added logic to the cards. added match function to check if two cards are the same

--- a/css/memory_game.css
+++ b/css/memory_game.css
@@ -51,9 +51,19 @@ ul li{
 ul li img {
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 .no-active-image {
     display: none;
+}
+.clicked {
+    pointer-events: none;
+}
+.matched-card {
+    pointer-events: none;
+}
+.not-active {
+    pointer-events: none;
 }
 
 /*Modal Css*/
