--- a/css/memory_game.css
+++ b/css/memory_game.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Shadows Into Light', 'cursive';
+    text-shadow: 1px 1px 2px white, 0 0 1em lightblue, 0 0 0.2em lightgreen;
 }
 #container {
     display: flex;
@@ -8,28 +10,28 @@ body {
     align-items: center;
     flex-direction: column;
     height: 100vh;
+    display: none;
 }
 
 /*Header Css*/
 
 #header {
     text-align: center;
-    height: 10%;
+    height: 8%;
 }
 #header > h1 {
     margin: 0;
-}
-#header > input {
-    margin: 10px auto;
 }
 
 /*Player score css*/
 
 #player-live-score {
-    height: 5%;
+    height: 8%;
     width: 100%;
-    background-color: rgb(82, 130, 181);
     margin: 10px auto;
+    text-align: center;
+    border: 1px solid black;
+    font-size: 2em;
 }
 
 /*Deck Css*/
@@ -78,19 +80,75 @@ ul li img {
 }
 #modal {
     background-color:white;
-    color: tomato;
+    border-radius: 10%;
     font-size: 60px;
     text-align: center;
-    height: 40%;
-    width: 40%;
+    height: 70%;
+    width: 60%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     opacity: 1;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 div#modal-container.active-modal {
     display: block;
+}
+
+/* buttons css*/
+.play-button {
+    font-family: 'Shadows Into Light', 'cursive';
+    background: tomato;
+    font-size: 0.9em;
+    padding: 10px;
+    border-radius: 10%;
+    border: 1px solid grey;
+}
+
+/*Welcome screen css */
+
+#welcome-screen {
+    background-color: tomato;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: block;
+    font-size: 25px;
+}
+#start {
+    display: inherit;
+    position: relative;
+}
+#difficulty {
+    display: none;
+}
+#theme {
+    display: none;
+}
+.customize-screen {
+    background-color: white;
+    border-radius: 5%;
+    width: 60%;
+    height: 60%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+#play-game-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-size: 3em;
 }
 
 @media only screen and (max-width: 600px) {
@@ -98,7 +156,13 @@ div#modal-container.active-modal {
     margin: 0;
 }
     #modal {
-    height: 20%;
-    font-size: 12px;
+    height: 40%;
+    font-size: 16px;
+    }
+    .customize-screen {
+        height: 30%;
+    }
+    #play-game-button {
+        font-size: 0.9em;
     }
 }
