--- a/css/memory_game.css
+++ b/css/memory_game.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
     font-family: 'Shadows Into Light', 'cursive';
     text-shadow: 1px 1px 2px white, 0 0 1em lightblue, 0 0 0.2em lightgreen;
 }
@@ -9,7 +11,6 @@ body {
     justify-content: start;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
     display: none;
 }
 
@@ -27,26 +28,22 @@ body {
 
 #player-live-score {
     height: 8%;
-    width: 100%;
     margin: 10px auto;
     text-align: center;
-    border: 1px solid black;
     font-size: 2em;
 }
 
 /*Deck Css*/
 #deck {
     display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
     list-style: none;
-    margin: 40px auto;
-    width: 60%;
-    height: 500px;
+    margin: 0 auto;
+    padding: 0;
+    
 }
 ul li{
-    width: 25%;
     margin: 5px;
     border: 1px solid black;
 }
@@ -139,10 +136,10 @@ div#modal-container.active-modal {
     transform: translateX(-50%) translateY(-50%);
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 320px) {
     #modal {
     height: 40%;
-    font-size: 16px;
+    font-size: 0.9em;
     }
     .customize-screen {
         height: 30%;
@@ -152,5 +149,78 @@ div#modal-container.active-modal {
     }
     #start h1 {
         font-size: 0.9em;
+    }
+    ul li {
+        height: 3.7rem;
+		width: 3.7rem;
+    }
+    #deck {
+        width: 90%;
+    }
+}
+@media only screen and (min-width: 450px) {
+    #modal {
+    font-size: 1.2em;
+    height: 50%;
+    }
+    ul li {
+        height: 4.7rem;
+		width: 4.7rem;
+    }
+    #deck {
+        width: 85%;
+    }
+}
+@media only screen and (min-width: 680px) {
+    #deck {
+        width: 600px;
+        height: 500px;
+    }
+    #modal {
+    height: 60%;
+    font-size: 2em;
+    }
+    .customize-screen {
+        height: 50%;
+    }
+    .play-button {
+        font-size: 1em;
+    }
+    #start h1 {
+        font-size: 1em;
+    }
+    ul li {
+        height: 5.7rem;
+        width: 5.7rem;
+    }
+}
+@media only screen and (min-width: 768px) {
+    #deck {
+        width: 750px;
+        height: 500px;
+    }
+    ul li {
+        height: 6rem;
+        width: 6rem;
+    }
+}
+@media only screen and (min-width: 1224px) {
+    #deck {
+        width: 70%;
+        height: 700px;
+    }
+    ul li {
+        height: 8rem;
+        width: 8rem;
+    }
+}
+@media only screen and (min-width: 1920px) {
+    #deck {
+        width: 65%;
+        height: 900px;
+    }
+    ul li {
+        height: 15rem;
+        width: 15rem;
     }
 }
