--- a/css/memory_game.css
+++ b/css/memory_game.css
@@ -41,25 +41,34 @@ body {
     list-style: none;
     margin: 0 auto;
     padding: 0;
+    perspective: 1000px;
     
 }
 ul li{
     margin: 5px;
     border: 1px solid black;
+    transition: transform 0.2s ease-out;
+    transform-style: preserve-3d;
 }
 ul li img {
     width: 100%;
     height: 100%;
     cursor: pointer;
 }
-.no-active-image {
-    display: none;
+.front-card {
+    position: absolute;
+}
+.back-card {
+    transform: rotateY(180deg);
+    position: absolute;
 }
 .clicked {
     pointer-events: none;
+    transform: rotateY(180deg);
 }
 .matched-card {
     pointer-events: none;
+    transform: rotateY(180deg);
 }
 .not-active {
     pointer-events: none;
