--- a/css/memory_game.css
+++ b/css/memory_game.css
@@ -151,6 +151,31 @@ table#table-score {
     font-size: 0.6em;
 }
 
+/*Input Css */
+
+input[type="text"]
+{
+    font-family: 'Shadows Into Light', 'cursive';
+    font-size:20px;
+}
+
+/*Place Holder Css*/
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    font-family: 'Shadows Into Light', 'cursive';
+    font-size: 20px;
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    font-family: 'Shadows Into Light', 'cursive';
+    font-size: 20px;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    font-family: 'Shadows Into Light', 'cursive';
+    font-size: 20px;
+}
+
 @media only screen and (min-width: 320px) {
     #modal {
     height: 50%;
